--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 body {
   margin: 0;
   font-family: serif;
-  font-size: 25px;
+  font-size: 30px;
   color: white;
   background-color: black;
   border-color: skyblue
@@ -31,8 +31,8 @@ nav {
 }
 
 button {
-  color: darkorchid;
-  background-color: white;
+  color: white;
+  background-color: black;
   font-family: serif;
   font-size: 20px;
 }
@@ -94,6 +94,22 @@ p3 {
   flex: 40%;
 }
 
+#fish {
+  width: 100px;
+  height: 100px;
+}
+
+#python {
+  margin-left: 25px;
+  width: 300px;
+  height: 300px;
+  border-radius: 50px;
+}
+
+#MoreMargin {
+  margin-bottom: 100px;
+}
+
 #Hey {
   font-size: 200px;
 }
@@ -117,6 +133,11 @@ p3 {
   margin-right: auto;
 }
 
+#Pointillism {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #Separate {
   margin-top: 100px;
   margin-bottom: 200px;
@@ -128,8 +149,13 @@ p3 {
 }
 
 #AboutMe {
-
   margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+#ContactMe {
   margin-left: auto;
   margin-right: auto;
 
@@ -140,19 +166,26 @@ p3 {
   margin-right: auto;
 }
 
-#p5proj {
+#p5proj1 {
   height: 446px;
   width: 605px;
 }
 
+#p5proj2 {
+  height: 470px;
+  width: 425px;
+}
+
 #me {
-  width: 100px;
-  height: 100px;
+  width: 400px;
+  height: 400px;
+  margin-left: 30px;
 }
 
 #me2 {
-  width: 100px;
-  height: 100px;
+  width: 400px;
+  height: 400px;
+  margin-right: 30px;
 }
 
 #fish {
